<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Veli</string>
    <string name="button">Button</string>
    <string name="choose_language">Select to choose a language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Login Fragment-->
    <string name="txtTitleLogin">Hello, let\'s go start</string>
    <string name="txtSubtitleLogin">Login into your Account</string>

    <!--Form Fragment-->
    <string name="txtTitleFavorites">Add your favorites</string>
    <string name="txtSubFavorites">Save your favorite places and never forget it</string>
    <string name="txtInputCountry">Enter your country destination</string>
    <string name="txtCountry">Country</string>
    <string name="txtInputCity">Enter your city destination</string>
    <string name="txtCity">City</string>
    <string name="txtInputAirport">Enter your airport destination</string>
    <string name="txtAirport">Airport</string>

    <!--Home Fragment-->
    <string name="txtUser">User,</string>
    <string name="txtJourney">let the journey</string>
    <string name="txtBegin">begin</string>
    <string name="txtSuggestions">Suggestions</string>
    <string name="txtCovid">Get the covid-19 travel info you need</string>
    <string name="txtRestrictions">Restrictions level from Spain</string>
    <string name="txtLow">Low</string>
    <string name="txtModerate">Moderate</string>
    <string name="txtMajor">Major</string>
    <string name="txtUnknown">Unknown</string>

    <!-- Settings Fragment -->
    <string-array name="languages">
        <item>Select to choose a language</item>
        <item name="en">English</item>
        <item name="es">Spanish</item>
    </string-array>
    <string name="txtTitleSettings">Settings</string>
    <string name="textLanguage">Language</string>
    <string name="textMode">Night Mode</string>
    <string name="biometricTitle">Identify with biometric</string>
    <string name="biometricSubtitle">In order to clear your preferences, you must log in </string>
    <string name="biometricPassword">Use account password</string>


    <!--Fragment List-->
    <string name="txtTitleFavoritesList">Marta, your favorites</string>
    <string name="alertDelete">All travels will be delete permanently</string>
    <string name="confirmation">Do you want to continue?</string>

    <!-- Detail Fragment -->
    <string name="txtCountryDetail">Country</string>
    <string name="txtCityDetail">City</string>
    <string name="txtAirportDetail">Airport</string>

    <!-- Buttons -->
    <string name="btnSave">Save</string>
    <string name="btnDeleteAllTravels">Delete all travels</string>
    <string name="btnMoreInfo">More info </string>
    <string name="btnAddPlace">Add place</string>
    <string name="btnEdit">Edit</string>
    <string name="btnDelete">Delete</string>
    <string name="btnSingIn">Sing in</string>
    <string name="btnReset">Reset</string>
    
    <!-- Toasts -->
    <string name="property">You need to introduce at least one property</string>
    <string name="save">The travel has been saved successfully</string>
    <string name="errorAuthentication">Authentication error: </string>
    <string name="failedAuthentication">Failed authentication</string>
    <string name="errorProperties">You need to introduce at least one property"</string>
    <string name="deletedTravels">Travels successfully deleted</string>
    <string name="loginIncorrect">User or password are incorrect</string>

</resources>