<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtUser"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_bold"
            android:shadowColor="@color/grey"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="2"
            android:text="@string/txtUser"
            android:textColor="@color/pink"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtJourney"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_bold"
            android:shadowColor="@color/grey"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="2"
            android:text="@string/txtJourney"
            android:textColor="@color/blue"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/txtUser"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtBegin"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/roboto_bold"
            android:shadowColor="@color/grey"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="2"
            android:text="@string/txtBegin"
            android:textColor="@color/blue"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUser" />

        <TextView
            android:id="@+id/txtSuggestions"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/txtSuggestions"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtBegin" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:elevation="10dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSuggestions">

            <ImageView
                android:id="@+id/imgBcn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:scaleType="centerCrop"
                android:src="@drawable/barcelona"
                tools:layout_conversion_absoluteHeight="100dp"
                tools:layout_editor_absoluteY="219dp"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_conversion_absoluteWidth="100dp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:elevation="10dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintStart_toEndOf="@+id/cardView1"
            app:layout_constraintTop_toBottomOf="@+id/txtSuggestions">

            <ImageView
                android:id="@+id/imgBcn2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/white"
                android:scaleType="centerCrop"
                android:src="@drawable/barcelona" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:elevation="100dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintStart_toEndOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/txtSuggestions">

            <ImageView
                android:id="@+id/imgBcn3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/white"
                android:scaleType="centerCrop"
                android:src="@drawable/barcelona" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtCovid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/txtCovid"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/custom_box_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCovid">

            <ImageView
                android:id="@+id/imgMapa"
                android:layout_width="189dp"
                android:layout_height="164dp"
                android:layout_marginEnd="1dp"
                android:background="#F1F2F8"
                android:src="@drawable/mapa"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtRestrictions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/txtRestrictions"
                android:textColor="@color/blue"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/txtLow"
                android:textColor="@color/blue"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtRestrictions" />

            <ImageView
                android:id="@+id/imgGreen"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_circle"
                app:layout_constraintEnd_toStartOf="@+id/txtLow"
                app:layout_constraintTop_toBottomOf="@+id/txtRestrictions"
                app:tint="#00A698" />

            <TextView
                android:id="@+id/txtModerate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/txtModerate"
                android:textColor="@color/blue"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLow" />

            <ImageView
                android:id="@+id/imgPink"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_circle"
                app:layout_constraintEnd_toStartOf="@+id/txtModerate"
                app:layout_constraintTop_toBottomOf="@+id/imgGreen"
                app:tint="#D1435B" />

            <TextView
                android:id="@+id/txtMajor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/txtMajor"
                android:textColor="@color/blue"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtModerate" />

            <ImageView
                android:id="@+id/imgYellow"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="9dp"
                android:src="@drawable/ic_circle"
                app:layout_constraintEnd_toStartOf="@+id/txtMajor"
                app:layout_constraintTop_toBottomOf="@+id/imgPink"
                app:tint="#FFB54D" />

            <ImageView
                android:id="@+id/imgGrey"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_circle"
                app:layout_constraintEnd_toStartOf="@+id/txtUnknown"
                app:layout_constraintTop_toBottomOf="@+id/imgYellow"
                app:tint="#B2B2BF" />

            <TextView
                android:id="@+id/txtUnknown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/txtUnknown"
                android:textColor="@color/blue"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtMajor" />

            <Button
                android:id="@+id/btnMoreInfo"
                android:layout_width="142dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/btnMoreInfo"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtUnknown"
                tools:text="@string/btnMoreInfo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>