<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".SettingsFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="405dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/setting_back">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="28dp"
            android:prompt="@string/choose_language"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLanguage" />

        <TextView
            android:id="@+id/txtTitleSettings"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/roboto_bold"
            android:shadowColor="@color/grey"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="2"
            android:text="@string/txtTitleSettings"
            android:textColor="@color/blue"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/textLanguage"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitleSettings" />

        <TextView
            android:id="@+id/textMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/textMode"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="28dp"
            android:text="ToggleButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textMode"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="370dp"
            android:layout_height="86dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton">

            <Button
                android:id="@+id/btnSavePreferences"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/btnSave"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/btnSave" />

            <Button
                android:id="@+id/btnReset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="50dp"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/roboto_bold"
                android:text="Reset"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnSavePreferences"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Reset" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>