<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:backgroundTint="@color/blue"
    tools:context=".DetailTravelFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="695dp"
                android:background="@color/white"
                android:elevation="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/barcelona" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/txtCountryDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/txtCountryDetail"
                    android:textAllCaps="true"
                    android:textColor="@color/blue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image" />

                <EditText
                    android:id="@+id/txtCountryEdit"
                    android:layout_width="302dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_input"
                    android:drawablePadding="20dp"
                    android:ems="10"
                    android:fontFamily="@font/roboto_bold"
                    android:hint="Country"
                    android:padding="20dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtCountryDetail" />

                <EditText
                    android:id="@+id/txtMail3"
                    android:layout_width="302dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_input"
                    android:drawablePadding="20dp"
                    android:ems="10"
                    android:fontFamily="@font/roboto_bold"
                    android:hint="Language"
                    android:inputType="textPersonName"
                    android:padding="20dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.492"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textLanguage4" />

                <TextView
                    android:id="@+id/textLanguage4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/txtCityDetail"
                    android:textAllCaps="true"
                    android:textColor="@color/blue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtCountryEdit" />

                <TextView
                    android:id="@+id/txtAirportDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/txtAirportDetail"
                    android:textAllCaps="true"
                    android:textColor="@color/blue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtMail3" />

                <EditText
                    android:id="@+id/txtMail4"
                    android:layout_width="302dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_input"
                    android:drawablePadding="20dp"
                    android:ems="10"
                    android:fontFamily="@font/roboto_bold"
                    android:hint="Airport"
                    android:inputType="textPersonName"
                    android:padding="20dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtAirportDetail" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="77dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtMail4"
                    tools:layout_editor_absoluteX="-15dp">

                    <Button
                        android:id="@+id/btnEditDetail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="50dp"
                        android:layout_marginBottom="20dp"
                        android:backgroundTint="@color/blue"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/btnSavePreferences"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/toggleButton"
                        app:layout_constraintVertical_bias="1.0"
                        tools:text="@string/btnSave" />

                    <Button
                        android:id="@+id/btnSavePreferencesDetail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:backgroundTint="@color/blue"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/btnSavePreferences"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/toggleButton"
                        app:layout_constraintVertical_bias="1.0"
                        tools:text="@string/btnEdit" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>